Changelog
=========

1.0.3 - unreleased
------------------

- Fixed state position in the state/transitions menu when it is no clickable.
  [vincentfretin]

- Worked on fixing up styles for IE7
 * removed padding on breadcrumb links, so all breadcrumb text
   displays on one level
 * put in hack to make links with content icons 'display: block' in IE.
   This fixes the Add New dropdown display, but breaks icon display on
   .navTreeCurrentItem, so I added zoom to the links.
   (fyi - the hack was the only way I could find to make this work to
   override the inline-block, did not work in IEFixes.css)
 * adjusted styles on logo so IE displays it in the correct place
 refs #1087
 [cwainwright]


1.0.2 - 2010-07-18
------------------

- Fixed problems with content menus sticking out of the edit bar under various
  font sizes. This closes http://dev.plone.org/plone/ticket/10736.
  [hannosch]

- Fixed anonymous personal bar spacing with multiple entries. This closes
  http://dev.plone.org/plone/ticket/10743.
  [hannosch]

- Fixed bulleted / numbered lists out of text area in right to left. This
  closes http://dev.plone.org/plone/ticket/9658.
  [emanlove, hannosch]

- Added back styles for grid listings. This refs
  http://dev.plone.org/plone/ticket/10331.
  [hannosch]

- Add globe icon to external links when "Mark External Links" is checked.
  [cwainwright]

- Update license to GPL version 2 only.
  [hannosch]

1.0.1 - 2010-07-07
------------------

- Removed remaining references to empty ``sunburst_js`` folder.
  [hannosch]

1.0 - 2010-07-07
----------------

- Removed IE9.js from Sunburst for now.
  [spliter]

- Cleaned up the Dashboard CSS. This fixes
  http://dev.plone.org/plone/ticket/10516.
  [limi]

- Adding max-width for the language selector, so it works even with
  a ridiculous amount of languages.
  This fixes http://dev.plone.org/plone/ticket/10452.
  [limi]

- Improved default rendering for Python code listings when using the